# flowistic-insights

./: LICENSE  README.md
rabbitmq-streams-trading/: INSIGHTS_ARTICLE.md  README.md  docker-compose.yml  pom.xml  pyproject.toml  rabbitmq.conf  requirements.txt
rabbitmq-streams-trading/src/: __init__.py  batching_consumer.py  config.py  consumer.py  dashboard.py  models.py  producer.py  replay_consumer.py  single_active_consumer.py
rabbitmq-streams-trading/src/main/java/com/flowistic/trading/config/: StreamConfig.java
rabbitmq-streams-trading/src/main/java/com/flowistic/trading/consumer/: BatchingConsumer.java  MarketDataConsumer.java  ReplayConsumer.java  SingleActiveConsumer.java
rabbitmq-streams-trading/src/main/java/com/flowistic/trading/model/: MarketData.java
rabbitmq-streams-trading/src/main/java/com/flowistic/trading/producer/: MarketDataProducer.java
rabbitmq-streams-trading/src/main/java/com/flowistic/trading/serialization/: MarketDataCodec.java
rabbitmq-streams-trading/src/main/resources/: logback.xml
