[project]
name = "rabbitmq-streams-trading"
version = "0.1.0"
description = "RabbitMQ Streams example for consuming market data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rstream>=0.20.0",
    "pydantic>=2.5.0",
    "orjson>=3.9.0",
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
    "pandas>=2.2.0",
]

[project.scripts]
producer = "src.producer:main"
consumer = "src.consumer:main"
batching-consumer = "src.batching_consumer:main"
replay-consumer = "src.replay_consumer:main"
single-active-consumer = "src.single_active_consumer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
